<resources>
    <string name="app_name">PlasmaCollection</string>
    <string name="nameSecondHalf">COLLECTION</string>
    <string name="nameFirstHalf">PLASMA</string>
    <string name="locationlogoimg">locationLogoImg</string>
    <string name="find_nearby_hospital">Find Nearby Hospital</string>
    <string name="view_requests">View/Generate Request</string>
    <string name="become_a_donor_now">Become a Donor Now</string>
    <string name="covid_19_updates_india">COVID 19 India</string>
    <string name="_18_oct_2022">18 Oct 2022</string>
    <string name="india_last_24_hours">India</string>
    <string name="delhi">Delhi</string>
    <string name="new_cases">New Cases</string>
    <string name="deaths">Deaths</string>
    <string name="casesCountryDigit">1000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="Name_of_recipient">Shivang Tiwari</string>
    <string name="patient_name">Patient Name:</string>
    <string name="patientForPlasma">Ankur</string>
    <string name="Primary_key_phone">9910305565</string>
    <string name="phone_number">Phone Number:</string>
    <string name="hospital_address">Hospital Address</string>
    <string name="HospitalName">Vedanta</string>
    <string name="age">Age:</string>
    <string name="Donor_age">20</string>
    <string name="cancel">cancel</string>
    <string name="know_about_plasma_donation">Know about plasma donation</string>
    <string name="_1_plasma_is_the_clear_straw_colored_liquid_portion_of_blood_that_remains_after_red_blood_cells_white_blood_cells_platelets_and_other_cellular_components_are_removed_the_single_largest_component_of_human_blood_it_comprises_about_55_percent_and_contains_water_salts_enzymes_antibodies_and_other_proteins">1. Plasma is the clear, straw-colored liquid portion of blood that remains after red blood cells, white blood cells, platelets and other cellular components are removed. The single largest component of human blood, it comprises about 55 percent, and contains water, salts, enzymes, antibodies and other proteins.</string>
    <string name="_2_plasma_carries_out_a_variety_of_functions_in_the_body_including_clotting_blood_fighting_diseases_and_other_critical_functions">2. Plasma carries out a variety of functions in the body, including clotting blood, fighting diseases and other critical functions.</string>
    <string name="_3_source_plasma_donation_and_blood_donation_are_critically_important_activities_that_contribute_to_saving_lives_for_many_with_rare_diseases_these_are_the_only_therapies_available_to_treat_these_chronic_conditions_your_plasma_can_be_used_to_create_therapies_that_treat_a_variety_of_conditions_and_diseases_including_hemophilia">3. Source plasma donation and blood donation are critically important activities that contribute to saving lives. For many with rare diseases, these are the only therapies available to treat these chronic conditions. Your plasma can be used to create therapies that treat a variety of conditions and diseases, including hemophilia.</string>
    <string name="_4_plasma_derived_therapies_are_also_used_in_everyday_medicine_and_emergency_and_critical_care_situations_as_well_as_in_preventive_medicine">4. Plasma-derived therapies are also used in everyday medicine and emergency and critical care situations, as well as in preventive medicine.</string>
    <string name="_5_patients_say_they_re_grateful_to_people_who_donate_plasma_during_the_covid_19_pandemic_patients_who_have_primary_immunodeficiencies_and_a_rare_disease_called_alpha_1_antitrypsin_deficiency_have_made_personal_pleas_asking_people_to_continue_donating_plasma_meet_additional_patients_who_are_helped_by_plasma_derived_therapies">5. Patients say they’re grateful to people who donate plasma. During the COVID-19 pandemic, patients who have primary immunodeficiencies and a rare disease called Alpha 1 Antitrypsin Deficiency have made personal pleas asking people to continue donating plasma. Meet additional patients who are helped by plasma-derived therapies.</string>
    <string name="_6_donors_find_meaning_in_plasma_donation_because_it_benefits_patients_who_depend_on_plasma_medicines_meet_a_few_donors_and_csl_employees_who_have_shared_their_stories_and_reasons_for_donating_plasma">6. Donors find meaning in plasma donation because it benefits patients who depend on plasma medicines. Meet a few donors and CSL employees who have shared their stories and reasons for donating plasma.</string>
    <string name="_7_source_plasma_is_collected_through_a_process_called_plasmapheresis_plasmapheresis_is_a_sterile_self_contained_automated_process_that_separates_plasma_from_red_blood_cells_and_other_cellular_components_which_are_then_returned_to_the_donor">7. Source plasma is collected through a process called plasmapheresis. Plasmapheresis is a sterile, self-contained, automated process that separates plasma from red blood cells and other cellular components which are then returned to the donor.</string>
    <string name="_8_in_general_plasma_donors_must_be_18_years_of_age_and_weigh_at_least_110_pounds_50kg_all_individuals_must_pass_two_separate_medical_examinations_a_medical_history_screening_and_testing_for_transmissible_viruses_before_their_donated_plasma_can_be_used_to_manufacture_plasma_protein_therapies_learn_more_in_this_video_explanation_about_donating_plasma">8. In general, plasma donors must be 18 years of age and weigh at least 110 pounds (50kg). All individuals must pass two separate medical examinations, a medical history screening and testing for transmissible viruses before their donated plasma can be used to manufacture plasma protein therapies. Learn more in this video explanation about donating plasma.</string>
    <string name="_9_donating_plasma_takes_time_and_commitment_to_help_ensure_a_safe_and_adequate_supply_of_plasma_donors_are_provided_with_a_modest_stipend_to_recognize_the_substantial_commitment_of_personal_time_and_travel_required_to_be_a_plasma_donor_each_plasma_collection_facility_sets_its_own_compensation_rates">9. Donating plasma takes time and commitment. To help ensure a safe and adequate supply of plasma, donors are provided with a modest stipend to recognize the substantial commitment of personal time and travel required to be a plasma donor. Each plasma collection facility sets its own compensation rates.</string>
    <string name="_10_there_are_900_plus_licensed_and_certified_plasma_collection_centers_in_the_u_s_canada_and_europe_find_a_donor_center_near_you_and_donate_today">10. There are 900-plus licensed and certified plasma collection centers in the U.S., Canada, and Europe. Find a donor center near you, and donate today.</string>
    <string name="designed_by_shivang_tiwari">designed by Shivang Tiwari</string>
</resources>