<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Donor">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/remember"
        app:cardElevation="10dp"
        app:cardCornerRadius="20dp"
        android:layout_margin="20dp"
        app:cardBackgroundColor="#FAE6FD"
        android:visibility="gone"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <ImageView
                android:id="@+id/close_This_View"
                android:contentDescription="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/ic_baseline_cancel_24" />

            <TextView
                style="@style/FocusedText"
                android:text="@string/know_about_plasma_donation"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/close_This_View"
                android:id="@+id/Heading"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Heading"
                android:padding="10dp"
                >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        style="@style/points"
                        android:text="@string/_1_plasma_is_the_clear_straw_colored_liquid_portion_of_blood_that_remains_after_red_blood_cells_white_blood_cells_platelets_and_other_cellular_components_are_removed_the_single_largest_component_of_human_blood_it_comprises_about_55_percent_and_contains_water_salts_enzymes_antibodies_and_other_proteins"
                        android:id="@+id/firstPoint"
                        />
                    <TextView
                        style="@style/points"
                        android:layout_below="@id/firstPoint"
                        android:text="@string/_2_plasma_carries_out_a_variety_of_functions_in_the_body_including_clotting_blood_fighting_diseases_and_other_critical_functions"
                        android:id="@+id/SecondPoint"
                        />
                    <TextView
                        style="@style/points"
                        android:layout_below="@id/SecondPoint"
                        android:text="@string/_3_source_plasma_donation_and_blood_donation_are_critically_important_activities_that_contribute_to_saving_lives_for_many_with_rare_diseases_these_are_the_only_therapies_available_to_treat_these_chronic_conditions_your_plasma_can_be_used_to_create_therapies_that_treat_a_variety_of_conditions_and_diseases_including_hemophilia"
                        android:id="@+id/ThirdPoint"
                        />
                    <TextView
                        style="@style/points"
                        android:layout_below="@id/ThirdPoint"
                        android:text="@string/_4_plasma_derived_therapies_are_also_used_in_everyday_medicine_and_emergency_and_critical_care_situations_as_well_as_in_preventive_medicine"
                        android:id="@+id/FourthPoint"
                        />
                    <TextView
                        style="@style/points"
                        android:layout_below="@id/FourthPoint"
                        android:text="@string/_5_patients_say_they_re_grateful_to_people_who_donate_plasma_during_the_covid_19_pandemic_patients_who_have_primary_immunodeficiencies_and_a_rare_disease_called_alpha_1_antitrypsin_deficiency_have_made_personal_pleas_asking_people_to_continue_donating_plasma_meet_additional_patients_who_are_helped_by_plasma_derived_therapies"
                        android:id="@+id/fifthPoint"
                        />
                    <TextView
                        style="@style/points"
                        android:layout_below="@id/fifthPoint"
                        android:text="@string/_6_donors_find_meaning_in_plasma_donation_because_it_benefits_patients_who_depend_on_plasma_medicines_meet_a_few_donors_and_csl_employees_who_have_shared_their_stories_and_reasons_for_donating_plasma"
                        android:id="@+id/SixthPoint"
                        />
                    <TextView
                        style="@style/points"
                        android:layout_below="@id/SixthPoint"
                        android:text="@string/_7_source_plasma_is_collected_through_a_process_called_plasmapheresis_plasmapheresis_is_a_sterile_self_contained_automated_process_that_separates_plasma_from_red_blood_cells_and_other_cellular_components_which_are_then_returned_to_the_donor"
                        android:id="@+id/SeventhPoint"
                        />
                    <TextView
                        style="@style/points"
                        android:layout_below="@id/SeventhPoint"
                        android:text="@string/_8_in_general_plasma_donors_must_be_18_years_of_age_and_weigh_at_least_110_pounds_50kg_all_individuals_must_pass_two_separate_medical_examinations_a_medical_history_screening_and_testing_for_transmissible_viruses_before_their_donated_plasma_can_be_used_to_manufacture_plasma_protein_therapies_learn_more_in_this_video_explanation_about_donating_plasma"
                        android:id="@+id/EighthPoint"
                        />
                    <TextView
                        style="@style/points"
                        android:layout_below="@id/EighthPoint"
                        android:text="@string/_9_donating_plasma_takes_time_and_commitment_to_help_ensure_a_safe_and_adequate_supply_of_plasma_donors_are_provided_with_a_modest_stipend_to_recognize_the_substantial_commitment_of_personal_time_and_travel_required_to_be_a_plasma_donor_each_plasma_collection_facility_sets_its_own_compensation_rates"
                        android:id="@+id/NinePoint"
                        />
                    <TextView
                        style="@style/points"
                        android:layout_below="@id/NinePoint"
                        android:text="@string/_10_there_are_900_plus_licensed_and_certified_plasma_collection_centers_in_the_u_s_canada_and_europe_find_a_donor_center_near_you_and_donate_today"
                        android:id="@+id/tenthPoint"
                        />
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tenthPoint"
                        android:text="Remember Points"
                        android:layout_margin="10dp"
                        />

                </RelativeLayout>

            </ScrollView>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="enter name"
        android:id="@+id/name"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sss"
        android:layout_below="@id/name"
        />

</RelativeLayout>